2006-11-04  Yoni Rabkin Katzenell  <yoni-r@actcom.com>  (tiny change)

	* faces.el (faces-sample-overlay, describe-face): Revert last
	changes.
	(faces-sample-overlay): Remove variable.
	(describe-face): Insert sample text in the face being described.

2006-11-04  Martin Rudalics  <rudalics@gmx.at>

	* whitespace.el (whitespace-indent-regexp): Make this match any
	multiples of eight spaces near the beginning of a line.
	(whitespace-buffer): Use `remove-overlays' instead of
	`whitespace-unhighlight-the-space' and `overlay-recenter' to
	speed up overlay handling.
	(whitespace-buffer-leading, whitespace-buffer-trailing): Make
	these functions highlight the text removed by
	`whitespace-buffer-leading-cleanup' and
	`whitespace-buffer-trailing-cleanup' respectively.
	(whitespace-buffer-search): Use `with-local-quit'.  Move
	`format' out of loop to speed up scanning larger buffers.
	(whitespace-unhighlight-the-space): Remove `remove-hook' since
	that function is never added to a hook.
	(whitespace-spacetab-regexp, whitespace-ateol-regexp)
	(whitespace-buffer-leading-cleanup)
	(whitespace-refresh-rescan-list): Fix docstrings.

2006-11-03  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-during-yank-processing): Cue for inhibiting
	aberrance processing during yanks.
	(allout-doublecheck-at-and-shallower): Reduce the limit to reduce
	the amount of yanked topics that can be aberrant.
	(allout-do-doublecheck): Encapsulate this multiply-used recipe in
	a function, and supplement with inihibition of doublechecking
	during yanks.
	(allout-beginning-of-line, allout-next-heading)
	(allout-previous-heading, allout-goto-prefix-doublechecked)
	(allout-back-to-current-heading, allout-next-visible-heading)
	(allout-next-sibling): Use new allout-do-doublecheck function.
	(allout-next-sibling): Ensure we made progress when returning
	other than nil.
	(allout-rebullet-heading): Preserve text property annotations
	indicating the text was hidden, if it was.